Ajout des interfaces pour la présentation des résultats

--- a/DifferencesFinies/nbproject/project.properties
+++ b/DifferencesFinies/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/DifferencesFinies.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.ujmp-complete-0.3.0.jar=G:\\Documents_Ecole\\ENSP\\Niveau4\\Semestre2\\Analyse_Num\u00e9rique2\\Librairies_matrices\\ujmp-complete-0.3.0.jar
+file.reference.ujmp-core-0.3.0.jar=F:\\DocUtil\\ujmp-core-0.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ujmp-complete-0.3.0.jar}
+    ${file.reference.ujmp-complete-0.3.0.jar}:\
+    ${file.reference.ujmp-core-0.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=differencesfinies.DifferencesFinies
+main.class=Affichage.Affichage2D
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
