--- a/DifferencesFinies/nbproject/private/private.properties
+++ b/DifferencesFinies/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.ujmp-core-0.3.0.jar=G:\\Documents_Ecole\\ENSP\\Niveau4\\Semestre2\\Analyse_Num\u00e9rique2\\TPAnanum\\Differences-Finies\\DifferencesFinies\\dist\\lib\\ujmp-complete-0.3.0.jar
 user.properties.file=C:\\Users\\E_DinaBrown\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
